--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": "true",
   "dependencies": {
     "express": "^4.13.3",
+    "moment": "^2.10.6",
     "mongoose": "^4.2.4",
     "passport": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
