--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "mongoose": "^4.2.4",
     "passport": "^0.3.0",
     "passport-google-oauth": "^0.2.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "body-parser": "~1.14.1",
+    "cookie-parser": "~1.4.0",
+    "express-session": "~1.12.1",
+    "connect-redis": "~3.0.1"
   }
 }
